--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="avatar">
-  <img src="images/port.png" alt="Shruti Logo">
+  <img src="port.png" alt="Shruti Logo">
     </div>
   </header>
 
